k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: laps-backend
  namespace: laps
spec:
  selector:
    app: laps-backend
    slot: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8100
  type: ClusterIP
